tests/ran_out_of_tokens/error.txt
Parse error: ./tests/ran_out_of_tokens/ran_out_of_tokens.fae:5
 Ran out of tokens to parse, expected newline
  5| fn func() {}
                ^
